stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__check_error_kind_type_error_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "8c2161ba760559dd0a19790ab560252ad1f369b1f2aa2d868868d50967d1e6b3",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(TypeError(UIntType, OptionalType(NoType))) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 811,
          write_count: 3,
          read_length: 470,
          read_count: 9,
          runtime: 58240,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 811,
      write_count: 3,
      read_length: 470,
      read_count: 9,
      runtime: 58240,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3dce5528fed1676402aeeeb23005cd535a482fb8d930526c7e09f1ad55e5e7eb",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(TypeError(UIntType, OptionalType(NoType))) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 811,
          write_count: 3,
          read_length: 472,
          read_count: 10,
          runtime: 59878,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 811,
      write_count: 3,
      read_length: 472,
      read_count: 10,
      runtime: 59878,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "312bbd18f60e722c1dcf90fbeb7a6962c54d1b3aff1a18e67dcdbd08cf95fc5c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(TypeError(UIntType, OptionalType(NoType))) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 811,
          write_count: 3,
          read_length: 472,
          read_count: 10,
          runtime: 59878,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 811,
      write_count: 3,
      read_length: 472,
      read_count: 10,
      runtime: 59878,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b17737c76f4b5fe4ac96075989298957d6543f8b4ef2c5225a19e973d9d3f82c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(TypeError(UIntType, OptionalType(NoType))) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 811,
          write_count: 3,
          read_length: 472,
          read_count: 10,
          runtime: 59878,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 811,
      write_count: 3,
      read_length: 472,
      read_count: 10,
      runtime: 59878,
    ),
  )),
]
