stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__check_error_memory_balance_exceeded_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "5505ffe9f29f58ae18f34a7ba44bbc194f906f48478cc02bf61b6991098e18cc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c55172d93bd47806a82e7f96ac2ba529b89f3742578674ec613cb9bf60d7dee9",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ee7c0bb0d2d9768703c0215a4fdeb79c8dd98c507a6f79bc6d4a068cc5a4d166",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fbd16d6c19ee0bc2bf124da2e783e757b2c91cc7e02278692d084b31e7605f24",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "be76813e09398ea350741c969bf538a19f42272d3133766b7f320f4b86063c35",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "becea66890e98f0e4ebe714ce527f967d956ba36be3251ce2539ea15e86abe3c",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "53f630ac957cc4a4cb98fd2437046b0e77ea57b961b52c95795ee55efd7d0abf",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6769e4f989632c953c69d3dbe56c221bc42997a56dca440147a9fb025e5467a5",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "aef0e9dcb708eb6d91dcf7cdbd6cf6bb4d09dfa58bc608e0006cc1b9ca967f38",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
]
