stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__invalid_characters_detected_invalid_ascii.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "f9bf062ced8abd544e17eaaea92f7395e1ecd60fbfb4c0f23404403ace6ae9f8",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-ascii-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 327,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20596,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 327,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20596,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "812425910f1fccc9aae6e0e525eeea22bc7d0eef7721592c9a92bc252aea6f4b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-ascii-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 327,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20596,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 327,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20596,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "381c169ead232f53395a74d1bef40cab8455f6d3e50fee1892bbea9c43041931",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-ascii-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 327,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20596,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 327,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20596,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cb259e6b6ca97607ff4d881b08abadb7a4ac566090e637e409f2bc72c1391644",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-ascii-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 327,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20596,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 327,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20596,
    ),
  )),
]
