stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__invalid_characters_detected_invalid_utf8.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "26b18e49a22233055458b982fae45238f471db9371092b82e3a4a0917975b183",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-utf8-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 329,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20642,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 329,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20642,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "eaec4d6218f23f49308d5380ce29f0d23d1131a18486f41654d6c3238dfc68b2",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-utf8-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 329,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20642,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 329,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20642,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f6e0ce012c2f7d9f9294cb918a73806abace386441d805973c1b30c83e00fce7",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-utf8-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 329,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20642,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 329,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20642,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bc2d51462a69b47352fd8636b4ce2dca20bf970cb20b4c341fa4776b601aaeae",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: invalid-utf8-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 329,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 20642,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 329,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 20642,
    ),
  )),
]
