stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__runtime_check_error_cost_balance_exceeded_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block c46144b78fde98045e0118ee8414ee90e12d999a31ed937ba38bf8062ca11a11: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953286 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 68d6873679fe391f08ae46c7af9171420c179874b172ce69ea496728f2de1999: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 3019cf6c0bc02f9ebb3ca54520528906c3b373cda383e4d646b9a23e84ff5695: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block c019513d538f1bb04ce504c832bc81cc4fa20e69bb68b07ad34dc0a594060b7c: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 3fab93d7998d2a4dc000951ab826d0b9242ebf01394c91ecea2df9f32249b451: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })",
  )),
]
